--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -276,3 +276,37 @@
     }
   }
 }
+
+.screen.screen--story.active .swiper-slide-active .slider__item-text,
+.screen.screen--story.active .swiper-slide-next .slider__item-text {
+  position: relative;
+  opacity: 1;
+  left: 0;
+  transition: opacity 300ms linear, left 300ms ease;
+}
+
+.screen.screen--story.active .slider__item-text,
+.screen.screen--story:not(.active) .swiper-slide-active .slider__item-text,
+.screen.screen--story:not(.active) .swiper-slide-next .slider__item-text {
+  position: relative;
+  left: 1rem;
+  opacity: 0;
+  transition: none;
+}
+
+.screen.screen--story.active .swiper-slide-next .slider__item-text {
+  @media (orientation: portrait), (max-width: $mobile) and (orientation: landscape) {
+    position: relative;
+    left: 1rem;
+    opacity: 0;
+    transition: none;
+  }
+}
+
+.screen.screen--story.active .swiper-slide-active .slider__item-text {
+  transition-delay: 300ms;
+}
+
+.screen.screen--story.active .swiper-slide-next .slider__item-text {
+  transition-delay: 600ms;
+}
