--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -162,3 +162,16 @@
     font-size: 48px;
   }
 }
+
+.screen.screen--intro.active .intro__message {
+  position: relative;
+  opacity: 1;
+  top: 0;
+  transition: opacity 300ms linear, top 300ms ease;
+}
+
+.screen.screen--intro:not(.active) .intro__message {
+  position: relative;
+  opacity: 0;
+  top: 1rem;
+}
