--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -281,6 +281,26 @@
         background-color: $c-purple;
       }
     }
+
+    &::after {
+      display: block;
+      width: 0;
+      left: auto;
+      right: 0;
+      transition: width 300ms;
+    }
+
+    &.active::after {
+      width: 100%;
+      left: 0;
+      right: auto;
+    }
+
+    &:hover::after {
+      width: 100%;
+      left: 0;
+      right: auto;
+    }
   }
 }
 
